# shield-agent-mcp

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt  setup.py  shield-agent.yaml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  security_scan.yml
docs/: CONFIGURATION.md  CONTEXT.md  DEVELOPMENT.md
scratch/: verify_logic.py  verify_scanner.py
shield_agent/: __init__.py  auditor.py  cli.py  config.py  mcp_server.py  scanner.py
tests/: test_auditor.py  test_cli.py  test_mcp_server.py  test_scanner_advanced.py  test_secret.py  test_supply_chain.py
