[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shield-agent-mcp"
version = "0.1.0"
authors = [
  { name="gbvk", email="masked@example.com" },
]
description = "A Hybrid-AI Security & Quality Sentinel for the MCP Era"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp>=1.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "google-genai>=1.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "gitpython>=3.1.0",
    "requests>=2.31.0",
    "pathspec>=0.11.0",
    "anyio>=4.0.0",
    "PyYAML>=6.0.1",
]

[project.scripts]
shield-agent = "shield_agent.cli:main"

[tool.setuptools]
packages = ["shield_agent"]

[dependency-groups]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "types-requests>=2.33.0.20260408",
    "types-PyYAML>=6.0.12",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    "ignore:.*_UnionGenericAlias.*:DeprecationWarning",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

